tests/snapshots/snapshot_tests__config_snapshot_basic.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{:#?}\", config)"
---
Config {
    source_dir: TargetDir(
        "C:\\source",
    ),
    destinations: DestinationCollection {
        destinations: [
            TargetDir(
                "D:\\dest",
            ),
        ],
    },
    debounce_seconds: 1,
    propagate_deletions: true,
    block_sync_threshold_bytes: 10,
    block_size_bytes: 4,
    verify_writes: true,
    retry_interval_seconds: 10,
}
