tests/snapshots/snapshot_tests__config_validation_error_not_a_directory.snap
---
source: tests/snapshot_tests.rs
expression: err.to_string()
---
Validation error: Source path is not a directory
