tests/snapshots/snapshot_tests__config_validation_error_zero_block_size.snap
---
source: tests/snapshot_tests.rs
expression: err.to_string()
---
Validation error: block_size_bytes must be greater than zero
