tests/snapshots/snapshot_tests__config_validation_error_zero_debounce.snap
---
source: tests/snapshot_tests.rs
expression: err.to_string()
---
Validation error: Debounce seconds must be greater than zero
