tests/snapshots/snapshot_tests__sync_error_display_config.snap
---
source: tests/snapshot_tests.rs
expression: err.to_string()
---
Config error: invalid TOML: missing field 'source_dir'
