tests/snapshots/snapshot_tests__sync_error_display_registry.snap
---
source: tests/snapshot_tests.rs
expression: err.to_string()
---
Registry error: Failed to open Run registry key
