tests/snapshots/snapshot_tests__sync_error_display_tray.snap
---
source: tests/snapshot_tests.rs
expression: err.to_string()
---
Tray error: Failed to create tray icon
